--- a/6. scss-lesson/scss/style.scss
+++ b/6. scss-lesson/scss/style.scss
@@ -94,3 +94,12 @@
 p {
   font-family: MulishLightItalic;
 }
+
+%errorBtn {
+  color: red;
+  background-color: yellow;
+}
+
+p {
+  @extend %errorBtn;
+}
